[gd_scene load_steps=17 format=3 uid="uid://b4qeg8h8q07u8"]

[ext_resource type="Texture2D" uid="uid://c2doxowe0pbv4" path="res://UI/Control/yellow_button13.png" id="1"]
[ext_resource type="Texture2D" uid="uid://4y0sfebdco0k" path="res://UI/Control/green_button13.png" id="2"]
[ext_resource type="Texture2D" uid="uid://coqqyg76wct3k" path="res://UI/Control/grey_button03.png" id="3"]
[ext_resource type="Texture2D" uid="uid://77bnnplkinqm" path="res://UI/Control/grey_button_down.png" id="4"]
[ext_resource type="Texture2D" uid="uid://bgiplwlfki22u" path="res://UI/Control/red_button10.png" id="5"]
[ext_resource type="Texture2D" uid="uid://bmvelj27iw7do" path="res://UI/Control/blue_button13.png" id="6"]
[ext_resource type="Texture2D" uid="uid://c5yrqg0lncfkt" path="res://UI/sprites/Domino Effect Logo.png" id="8"]
[ext_resource type="FontFile" uid="uid://cxgxlgqxgek6n" path="res://UI/Fonts/Non_Nunito/domino_font/human_domino.otf" id="9"]
[ext_resource type="Script" path="res://Scripts/Menu_Scene.gd" id="10"]

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("9")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/2/0/ascent = 0.0
cache/0/2/0/descent = 0.0
cache/0/2/0/underline_position = 0.0
cache/0/2/0/underline_thickness = 0.0
cache/0/2/0/scale = 1.0
cache/0/3/0/ascent = 0.0
cache/0/3/0/descent = 0.0
cache/0/3/0/underline_position = 0.0
cache/0/3/0/underline_thickness = 0.0
cache/0/3/0/scale = 1.0
cache/0/4/0/ascent = 0.0
cache/0/4/0/descent = 0.0
cache/0/4/0/underline_position = 0.0
cache/0/4/0/underline_thickness = 0.0
cache/0/4/0/scale = 1.0
cache/0/5/0/ascent = 0.0
cache/0/5/0/descent = 0.0
cache/0/5/0/underline_position = 0.0
cache/0/5/0/underline_thickness = 0.0
cache/0/5/0/scale = 1.0
cache/0/6/0/ascent = 0.0
cache/0/6/0/descent = 0.0
cache/0/6/0/underline_position = 0.0
cache/0/6/0/underline_thickness = 0.0
cache/0/6/0/scale = 1.0
cache/0/7/0/ascent = 0.0
cache/0/7/0/descent = 0.0
cache/0/7/0/underline_position = 0.0
cache/0/7/0/underline_thickness = 0.0
cache/0/7/0/scale = 1.0
cache/0/8/0/ascent = 0.0
cache/0/8/0/descent = 0.0
cache/0/8/0/underline_position = 0.0
cache/0/8/0/underline_thickness = 0.0
cache/0/8/0/scale = 1.0
cache/0/9/0/ascent = 0.0
cache/0/9/0/descent = 0.0
cache/0/9/0/underline_position = 0.0
cache/0/9/0/underline_thickness = 0.0
cache/0/9/0/scale = 1.0
cache/0/10/0/ascent = 0.0
cache/0/10/0/descent = 0.0
cache/0/10/0/underline_position = 0.0
cache/0/10/0/underline_thickness = 0.0
cache/0/10/0/scale = 1.0
cache/0/11/0/ascent = 0.0
cache/0/11/0/descent = 0.0
cache/0/11/0/underline_position = 0.0
cache/0/11/0/underline_thickness = 0.0
cache/0/11/0/scale = 1.0
cache/0/12/0/ascent = 0.0
cache/0/12/0/descent = 0.0
cache/0/12/0/underline_position = 0.0
cache/0/12/0/underline_thickness = 0.0
cache/0/12/0/scale = 1.0
cache/0/13/0/ascent = 0.0
cache/0/13/0/descent = 0.0
cache/0/13/0/underline_position = 0.0
cache/0/13/0/underline_thickness = 0.0
cache/0/13/0/scale = 1.0
cache/0/14/0/ascent = 0.0
cache/0/14/0/descent = 0.0
cache/0/14/0/underline_position = 0.0
cache/0/14/0/underline_thickness = 0.0
cache/0/14/0/scale = 1.0
cache/0/15/0/ascent = 0.0
cache/0/15/0/descent = 0.0
cache/0/15/0/underline_position = 0.0
cache/0/15/0/underline_thickness = 0.0
cache/0/15/0/scale = 1.0
cache/0/17/0/ascent = 0.0
cache/0/17/0/descent = 0.0
cache/0/17/0/underline_position = 0.0
cache/0/17/0/underline_thickness = 0.0
cache/0/17/0/scale = 1.0
cache/0/18/0/ascent = 0.0
cache/0/18/0/descent = 0.0
cache/0/18/0/underline_position = 0.0
cache/0/18/0/underline_thickness = 0.0
cache/0/18/0/scale = 1.0
cache/0/19/0/ascent = 0.0
cache/0/19/0/descent = 0.0
cache/0/19/0/underline_position = 0.0
cache/0/19/0/underline_thickness = 0.0
cache/0/19/0/scale = 1.0
cache/0/20/0/ascent = 0.0
cache/0/20/0/descent = 0.0
cache/0/20/0/underline_position = 0.0
cache/0/20/0/underline_thickness = 0.0
cache/0/20/0/scale = 1.0
cache/0/21/0/ascent = 0.0
cache/0/21/0/descent = 0.0
cache/0/21/0/underline_position = 0.0
cache/0/21/0/underline_thickness = 0.0
cache/0/21/0/scale = 1.0
cache/0/22/0/ascent = 0.0
cache/0/22/0/descent = 0.0
cache/0/22/0/underline_position = 0.0
cache/0/22/0/underline_thickness = 0.0
cache/0/22/0/scale = 1.0
cache/0/23/0/ascent = 0.0
cache/0/23/0/descent = 0.0
cache/0/23/0/underline_position = 0.0
cache/0/23/0/underline_thickness = 0.0
cache/0/23/0/scale = 1.0
cache/0/24/0/ascent = 0.0
cache/0/24/0/descent = 0.0
cache/0/24/0/underline_position = 0.0
cache/0/24/0/underline_thickness = 0.0
cache/0/24/0/scale = 1.0
cache/0/25/0/ascent = 0.0
cache/0/25/0/descent = 0.0
cache/0/25/0/underline_position = 0.0
cache/0/25/0/underline_thickness = 0.0
cache/0/25/0/scale = 1.0
cache/0/26/0/ascent = 0.0
cache/0/26/0/descent = 0.0
cache/0/26/0/underline_position = 0.0
cache/0/26/0/underline_thickness = 0.0
cache/0/26/0/scale = 1.0
cache/0/27/0/ascent = 0.0
cache/0/27/0/descent = 0.0
cache/0/27/0/underline_position = 0.0
cache/0/27/0/underline_thickness = 0.0
cache/0/27/0/scale = 1.0
cache/0/28/0/ascent = 0.0
cache/0/28/0/descent = 0.0
cache/0/28/0/underline_position = 0.0
cache/0/28/0/underline_thickness = 0.0
cache/0/28/0/scale = 1.0
cache/0/29/0/ascent = 0.0
cache/0/29/0/descent = 0.0
cache/0/29/0/underline_position = 0.0
cache/0/29/0/underline_thickness = 0.0
cache/0/29/0/scale = 1.0
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0
cache/0/31/0/ascent = 0.0
cache/0/31/0/descent = 0.0
cache/0/31/0/underline_position = 0.0
cache/0/31/0/underline_thickness = 0.0
cache/0/31/0/scale = 1.0
cache/0/32/0/ascent = 0.0
cache/0/32/0/descent = 0.0
cache/0/32/0/underline_position = 0.0
cache/0/32/0/underline_thickness = 0.0
cache/0/32/0/scale = 1.0
cache/0/33/0/ascent = 0.0
cache/0/33/0/descent = 0.0
cache/0/33/0/underline_position = 0.0
cache/0/33/0/underline_thickness = 0.0
cache/0/33/0/scale = 1.0
cache/0/34/0/ascent = 0.0
cache/0/34/0/descent = 0.0
cache/0/34/0/underline_position = 0.0
cache/0/34/0/underline_thickness = 0.0
cache/0/34/0/scale = 1.0
cache/0/35/0/ascent = 0.0
cache/0/35/0/descent = 0.0
cache/0/35/0/underline_position = 0.0
cache/0/35/0/underline_thickness = 0.0
cache/0/35/0/scale = 1.0
cache/0/36/0/ascent = 0.0
cache/0/36/0/descent = 0.0
cache/0/36/0/underline_position = 0.0
cache/0/36/0/underline_thickness = 0.0
cache/0/36/0/scale = 1.0
cache/0/37/0/ascent = 0.0
cache/0/37/0/descent = 0.0
cache/0/37/0/underline_position = 0.0
cache/0/37/0/underline_thickness = 0.0
cache/0/37/0/scale = 1.0
cache/0/38/0/ascent = 0.0
cache/0/38/0/descent = 0.0
cache/0/38/0/underline_position = 0.0
cache/0/38/0/underline_thickness = 0.0
cache/0/38/0/scale = 1.0
cache/0/39/0/ascent = 0.0
cache/0/39/0/descent = 0.0
cache/0/39/0/underline_position = 0.0
cache/0/39/0/underline_thickness = 0.0
cache/0/39/0/scale = 1.0
cache/0/40/0/ascent = 0.0
cache/0/40/0/descent = 0.0
cache/0/40/0/underline_position = 0.0
cache/0/40/0/underline_thickness = 0.0
cache/0/40/0/scale = 1.0
cache/0/41/0/ascent = 0.0
cache/0/41/0/descent = 0.0
cache/0/41/0/underline_position = 0.0
cache/0/41/0/underline_thickness = 0.0
cache/0/41/0/scale = 1.0
cache/0/42/0/ascent = 0.0
cache/0/42/0/descent = 0.0
cache/0/42/0/underline_position = 0.0
cache/0/42/0/underline_thickness = 0.0
cache/0/42/0/scale = 1.0
cache/0/43/0/ascent = 0.0
cache/0/43/0/descent = 0.0
cache/0/43/0/underline_position = 0.0
cache/0/43/0/underline_thickness = 0.0
cache/0/43/0/scale = 1.0
cache/0/44/0/ascent = 0.0
cache/0/44/0/descent = 0.0
cache/0/44/0/underline_position = 0.0
cache/0/44/0/underline_thickness = 0.0
cache/0/44/0/scale = 1.0
cache/0/45/0/ascent = 0.0
cache/0/45/0/descent = 0.0
cache/0/45/0/underline_position = 0.0
cache/0/45/0/underline_thickness = 0.0
cache/0/45/0/scale = 1.0
cache/0/46/0/ascent = 0.0
cache/0/46/0/descent = 0.0
cache/0/46/0/underline_position = 0.0
cache/0/46/0/underline_thickness = 0.0
cache/0/46/0/scale = 1.0

[sub_resource type="FontFile" id="3"]
fallbacks = Array[Font]([ExtResource("9")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/26/0/ascent = 0.0
cache/0/26/0/descent = 0.0
cache/0/26/0/underline_position = 0.0
cache/0/26/0/underline_thickness = 0.0
cache/0/26/0/scale = 1.0

[sub_resource type="FontFile" id="4"]
fallbacks = Array[Font]([ExtResource("9")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/26/0/ascent = 0.0
cache/0/26/0/descent = 0.0
cache/0/26/0/underline_position = 0.0
cache/0/26/0/underline_thickness = 0.0
cache/0/26/0/scale = 1.0

[sub_resource type="FontFile" id="5"]
fallbacks = Array[Font]([ExtResource("9")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/26/0/ascent = 0.0
cache/0/26/0/descent = 0.0
cache/0/26/0/underline_position = 0.0
cache/0/26/0/underline_thickness = 0.0
cache/0/26/0/scale = 1.0

[sub_resource type="Animation" id="6"]
resource_name = "fall into place"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -600), Vector2(0, 0)]
}

[sub_resource type="Animation" id="7"]
resource_name = "transition_out"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 600)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_85wkk"]
_data = {
"fall into place": SubResource("6"),
"transition_out": SubResource("7")
}

[node name="Menu_Scene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("10")

[node name="Menu_Container" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="HBoxContainer" type="HBoxContainer" parent="Menu_Container"]
layout_mode = 2
theme_override_constants/separation = 175
alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="Menu_Container/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect2" type="TextureRect" parent="Menu_Container/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("8")
expand_mode = 1
stretch_mode = 5

[node name="MarginContainer2" type="MarginContainer" parent="Menu_Container/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Menu_Container/HBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 3
alignment = 1

[node name="Button_Container" type="VBoxContainer" parent="Menu_Container/HBoxContainer/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 2.0
theme_override_constants/separation = 30
alignment = 1

[node name="Play_Button" type="TextureButton" parent="Menu_Container/HBoxContainer/MarginContainer2/VBoxContainer/Button_Container"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("3")
texture_pressed = ExtResource("4")
texture_hover = ExtResource("2")

[node name="MarginContainer" type="MarginContainer" parent="Menu_Container/HBoxContainer/MarginContainer2/VBoxContainer/Button_Container/Play_Button"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.764
anchor_bottom = 0.556
offset_right = -1.52588e-05
offset_bottom = -0.0400047
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_top = 8

[node name="Label" type="Label" parent="Menu_Container/HBoxContainer/MarginContainer2/VBoxContainer/Button_Container/Play_Button/MarginContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0.945098, 0, 1)
theme_override_colors/font_shadow_color = Color(0.454902, 0.8, 0.298039, 0.054902)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = SubResource("2")
theme_override_font_sizes/font_size = 26
text = "Play"
horizontal_alignment = 1

[node name="Tutorial_Button" type="TextureButton" parent="Menu_Container/HBoxContainer/MarginContainer2/VBoxContainer/Button_Container"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
size_flags_horizontal = 5
mouse_default_cursor_shape = 2
texture_normal = ExtResource("3")
texture_pressed = ExtResource("4")
texture_hover = ExtResource("2")

[node name="MarginContainer" type="MarginContainer" parent="Menu_Container/HBoxContainer/MarginContainer2/VBoxContainer/Button_Container/Tutorial_Button"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.764
anchor_bottom = 0.544
offset_right = -1.52588e-05
offset_bottom = 0.0399971
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_top = 8

[node name="Label" type="Label" parent="Menu_Container/HBoxContainer/MarginContainer2/VBoxContainer/Button_Container/Tutorial_Button/MarginContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0.454902, 0.8, 0.298039, 0.054902)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = SubResource("2")
theme_override_font_sizes/font_size = 26
text = "Tutorial"
horizontal_alignment = 1

[node name="Settings_Button" type="TextureButton" parent="Menu_Container/HBoxContainer/MarginContainer2/VBoxContainer/Button_Container"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
size_flags_horizontal = 5
mouse_default_cursor_shape = 2
texture_normal = ExtResource("3")
texture_pressed = ExtResource("4")
texture_hover = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="Menu_Container/HBoxContainer/MarginContainer2/VBoxContainer/Button_Container/Settings_Button"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.76
anchor_bottom = 0.556
offset_right = -1.52588e-05
offset_bottom = -0.0400047
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_top = 8

[node name="Label" type="Label" parent="Menu_Container/HBoxContainer/MarginContainer2/VBoxContainer/Button_Container/Settings_Button/MarginContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 0)
theme_override_colors/font_shadow_color = Color(0.984314, 0.8, 0.0156863, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = SubResource("3")
theme_override_font_sizes/font_size = 26
text = "Settings"
horizontal_alignment = 1

[node name="Saves_Button" type="TextureButton" parent="Menu_Container/HBoxContainer/MarginContainer2/VBoxContainer/Button_Container"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
size_flags_horizontal = 5
mouse_default_cursor_shape = 2
texture_normal = ExtResource("3")
texture_pressed = ExtResource("4")
texture_hover = ExtResource("6")

[node name="MarginContainer" type="MarginContainer" parent="Menu_Container/HBoxContainer/MarginContainer2/VBoxContainer/Button_Container/Saves_Button"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.76
anchor_bottom = 0.544
offset_right = -1.52588e-05
offset_bottom = 0.0399971
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_top = 8

[node name="Label" type="Label" parent="Menu_Container/HBoxContainer/MarginContainer2/VBoxContainer/Button_Container/Saves_Button/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 1, 1)
theme_override_colors/font_shadow_color = Color(0.454902, 0.8, 0.298039, 0.054902)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = SubResource("4")
theme_override_font_sizes/font_size = 26
text = "Saves"
horizontal_alignment = 1

[node name="Quit_Button" type="TextureButton" parent="Menu_Container/HBoxContainer/MarginContainer2/VBoxContainer/Button_Container"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
size_flags_horizontal = 5
mouse_default_cursor_shape = 2
texture_normal = ExtResource("3")
texture_pressed = ExtResource("4")
texture_hover = ExtResource("5")

[node name="MarginContainer" type="MarginContainer" parent="Menu_Container/HBoxContainer/MarginContainer2/VBoxContainer/Button_Container/Quit_Button"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.76
anchor_bottom = 0.522
offset_right = -1.52588e-05
offset_bottom = 0.0200005
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_top = 8

[node name="Label" type="Label" parent="Menu_Container/HBoxContainer/MarginContainer2/VBoxContainer/Button_Container/Quit_Button/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 7
theme_override_colors/font_color = Color(0.886275, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.454902, 0.8, 0.298039, 0.054902)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = SubResource("5")
theme_override_font_sizes/font_size = 26
text = "Quit"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Menu_Container"]
libraries = {
"": SubResource("AnimationLibrary_85wkk")
}
autoplay = "fall into place"

[connection signal="pressed" from="Menu_Container/HBoxContainer/MarginContainer2/VBoxContainer/Button_Container/Play_Button" to="." method="_on_Play_Button_pressed"]
[connection signal="pressed" from="Menu_Container/HBoxContainer/MarginContainer2/VBoxContainer/Button_Container/Tutorial_Button" to="." method="_on_Tutorial_Button_pressed"]
[connection signal="pressed" from="Menu_Container/HBoxContainer/MarginContainer2/VBoxContainer/Button_Container/Quit_Button" to="." method="_on_Quit_Button_pressed"]
